# Burrow-DB

./: .gitignore  ARCHITECTURAL_ADVANTAGES.md  CODE_SUMMARY.md  COMPLETION_SUMMARY.md  DEB_RELEASE_SUMMARY.md  DISCREPANCY_ANALYSIS_REPORT.md  FIXES_APPLIED.md  FIXES_SUMMARY.md  LAUNCH.md  README.md  VERIFICATION_REPORT.md  build_deb.sh
burrow_db/: ARCHITECTURAL_ADVANTAGES.md  CODE_SUMMARY.md  Cargo.toml  DEB_RELEASE_SUMMARY.md  LAUNCH.md  README.md  Work_logs.md  build_deb.sh  burrow-db_0.1.0_amd64.deb
burrow_db/burrow_client/: Cargo.toml
burrow_db/burrow_client/data/: test_123.block  user_1.block  user_2.block
burrow_db/burrow_client/examples/: simple_app.rs
burrow_db/burrow_client/src/: lib.rs
burrow_db/burrow_server/src/: actor_engine.rs  client.rs  data_plane.rs  lib.rs  metrics.rs  multiplexer.rs  server.rs
burrow_db/data/: user_1.block  user_2.block  user_3.block
burrow_db/debian/: changelog  control  copyright  postinst  prerm
burrow_db/schemas/: document.fbs
burrow_db/src/: cli.rs  document_block.rs  lib.rs  tests.rs
burrow_server/: Cargo.toml
burrow_server/examples/: test_actor_engine.rs  test_client_server.rs
burrow_server/src/: actor_server.rs  main.rs  protocol.rs  write_manager.rs
debian/: rules
src/: cli.rs  document_block.rs  error.rs  lib.rs  main.rs  storage.rs
