[package]
name = "burrow_db"
version = "0.1.0"
edition = "2021"
authors = ["RDJ2000"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/RDJ2000/Burrow-DB"
description = "High-performance document database with hot-cold tiering"

[dependencies]
flatbuffers = "2.0"

[dev-dependencies]
tempfile = "3.23.0"
